# beauty-camera-studio

./: .gitignore  README.md  RELEASE_NOTES.md
demo/: CMakeLists.txt
demo/desktop/: app.cc  beauty_camera_app.h  beauty_profile_manager.cc  beauty_profile_manager.h  camera_manager.cc  camera_manager.h  filter_pipeline.cc  filter_pipeline.h  virtual_camera.cc  virtual_camera.h
include/gpupixel/: gpupixel.h
include/gpupixel/face_detector/: face_detector.h
include/gpupixel/filter/: filter.h
include/gpupixel/source/: source_camera.h
include/gpupixel/utils/: mediapipe_segmentation.h  rvm_processor.h
src/: CMakeLists.txt
src/background/: background_processor.cc  background_processor.h  person_segmentator.cc  person_segmentator.h
src/core/: gpupixel_context.cc  gpupixel_context.h
src/face_detector/: face_detector.cc  opencv_face_detector.cc  opencv_face_detector.cpp  opencv_face_detector.h
src/filter/: background_effect_filter.cc  background_effect_filter.h  face_makeup_filter.cc  lipstick_filter.cc
src/source/: source_camera.cc
src/utils/: mediapipe_segmentation.cpp  mediapipe_segmentation.h  rvm_processor.cpp
